@@ -559,24 +559,16 @@ func_checker::parse_labels (sem_bb *bb)
 bool
 func_checker::compare_bb (sem_bb *bb1, sem_bb *bb2)
 {
-  unsigned i;
   gimple_stmt_iterator gsi1, gsi2;
   gimple s1, s2;
 
-  if (bb1->nondbg_stmt_count != bb2->nondbg_stmt_count
-      || bb1->edge_count != bb2->edge_count)
-    return return_false ();
+  gsi1 = gsi_start_bb_nondebug (bb1->bb);
+  gsi2 = gsi_start_bb_nondebug (bb2->bb);
 
-  gsi1 = gsi_start_bb (bb1->bb);
-  gsi2 = gsi_start_bb (bb2->bb);
-
-  for (i = 0; i < bb1->nondbg_stmt_count; i++)
+  while (!gsi_end_p (gsi1))
     {
-      if (is_gimple_debug (gsi_stmt (gsi1)))
-	gsi_next_nondebug (&gsi1);
-
-      if (is_gimple_debug (gsi_stmt (gsi2)))
-	gsi_next_nondebug (&gsi2);
+      if (gsi_end_p (gsi2))
+	return return_false ();
 
       s1 = gsi_stmt (gsi1);
       s2 = gsi_stmt (gsi2);
@@ -646,9 +638,12 @@ func_checker::compare_bb (sem_bb *bb1, sem_bb *bb2)
 	  return return_false_with_msg ("Unknown GIMPLE code reached");
 	}
 
-      gsi_next (&gsi1);
-      gsi_next (&gsi2);
+      gsi_next_nondebug (&gsi1);
+      gsi_next_nondebug (&gsi2);
     }
+
+  if (!gsi_end_p (gsi2))
+    return return_false ();
 
   return true;
 }
